<resources>
    <string name="app_name">CERTIFY Vendor</string>
    <string name="welcome_back">Welcome Back!</string>

    <!-- Login screen -->
    <string name="sign_in_title">Please sign into your account</string>
    <string name="user_name">Email *</string>
    <string name="pass_word_text">Password *</string>
    <string name="forgot_pass_word_text">Forgot Password?</string>
    <string name="sign_in_mobile_title">Sign in with Mobile no.</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_phone_number_title">Please enter your Phone no. so we can send you Passcode</string>
    <string name="send_confirmation_msg">We will send you a confirmation code</string>
    <string name="phone_number_title">Phone No.</string>
    <string name="request_passcode">Request Passcode</string>
    <string name="enter_pass_code_title">Enter 4 Digits Passcode</string>
    <string name="enter_pass_code_desc">Enter the 4 digits code that you received on your phone</string>
    <string name="user_name_error">Please input user name</string>
    <string name="pass_word_error">Please input password</string>
    <string name="login_error">Login Error!</string>

    <!-- Appointment screen -->
    <string name="welcome_home">Welcome home</string>
    <string name="upcoming_appointment">Upcoming Appointment</string>
    <string name="past_appointment">Past Appointment</string>
    <string name="appt_user_name">Hi %1$s</string>
    <string name="wave_hand">Wave Hand</string>
    <string name="user_pic">User Profile pic</string>
    <string name="location_pic">Location Icon</string>
    <string name="view_all">View All</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="no_appointments">No Appointments</string>
    <string name="appointment_location">%1$s \n%2$s %3$s, %4$s %5$s</string>
    <string name="appointment_time">%3$s %1$s - %2$s</string>
    <string name="no_location">No Location</string>

    <!-- Navigation menu -->
    <string name="home">Home</string>
    <string name="credentials">Credentials</string>
    <string name="badge">Badge</string>
    <string name="settings">Settings</string>

    <!-- Badge -->
    <string name="badge_user_name">%1$s %2$s</string>
    <string name="no_appointment">No Appointment!</string>
    <string name="consectetur_adipiscing_elit">Please click on "Schedule appointment" to add appointments. Use "Manage facilities" to add a facility </string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="request_appoinment">Request Appointment</string>
    <string name="select_facility">Select Facility</string>
    <string name="content_appoinment">The hospitals listed are hospitals you chose as part of your territory and that require you to request an appointment that needs to be approved before visiting their hospital. After you request an appointment, It will be sent by email to the person you are requesting an appointment from and they will either accept or decline your appointment request. You will receive an email when they approve or decline the appointment and it will be added to your admin area under appointments.</string>
    <string name="textviewOne">1 of 3</string>
    <string name="textviewTwo">2 of 3</string>
    <string name="status">Status:&#160;</string>
    <string name="active">Active</string>
    <string name="id">ID:&#160;</string>
    <string name="expires_on">Expires on:&#160;</string>
    <string name="expires">Expires on: %1$s</string>
    <string name="appt">Appointment Status: %1$s</string>
    <string name="appointment_status">Appt: %1$s</string>
    <string name="request_replacement_badge">Request replacement badge</string>
    <string name="select_date_time">Select Date and Time</string>
    <string name="to">to</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="reshedule">Reschedule</string>
    <string name="reason_for_visit">Reason for visit*</string>
    <string name="limit_140">Maximum 140 characters</string>
    <string name="onsite_contact">On-Site Contact*</string>
    <string name="personName">Person Name</string>
    <string name="thanks_booking">Thanks for booking!</string>
    <string name="appoinment_confirmation">You booked an appointment with </string>
    <string name="go_to_my_appoinments">Go to my appointments</string>
    <string name="submit">Submit</string>
    <string name="appoinment">Appointment with</string>
    <string name="incomplete_credentials">Please complete the credentials required to schedule an appointment for this facility.</string>
    <string name="please_enter_reason">Please enter reason for visit</string>
    <string name="please_enter_person">Please enter contact person name</string>
    <string name="myaccount">My account</string>
    <string name="privacy">Privacy Policy</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">LogOut</string>
    <string name="security_title">Security warning</string>
    <string name="invalid_ssl_cert">There are problems with the security certificate for this site</string>
    <string name="tv_confirm">Confirm</string>
    <string name="tv_cancel">Cancel</string>
    <string name="logout_header">Are you sure to logout?</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="badge_status">Badge status: </string>
    <string name="manage_badge">Manage Badge</string>
    <string name="badge_vendor_image">Badge vendor image</string>
    <string name="badge_user_image">Badge user image</string>
    <string name="badge_qrcode_image">Badge QrCode image</string>
    <string name="badge_battery_image">Badge battery status image</string>
    <string name="badge_connection_image">Badge connection image</string>
    <string name="badge_connected">Connected</string>
    <string name="badge_disconnected">Disconnected</string>
    <string name="badge_not_configured">Not configured</string>
    <string name="badge_not_connected">Not connected</string>
    <string name="badge_percent_100">100%</string>
    <string name="badge_percent_70">70%</string>
    <string name="badge_percent_30">30%</string>
    <string name="badge_percent_10">10%</string>
    <string name="ebadge">e-Badge</string>
    <string name="disconnect_badge">Disconnect Badge</string>
    <string name="reconnect_badge">Reconnect Badge</string>
    <string name="badge_unavailable">Badge unavailable</string>
    <string name="badge_connected_msg">Badge connected</string>
    <string name="badge_disconnected_msg">Badge disconnected</string>

    <!-- Badge firmware -->
    <string name="firmware_update">Firmware update</string>
    <string name="firmware_version">Version: %1$s</string>
    <string name="new_firmware_update_available">A new update is available</string>
    <string name="firmware_last_updated">Last updated: %1$s</string>
    <string name="firmware_upto_date">Your badge firmware is up to date</string>
    <string name="updating_firmware">Firmware update</string>
    <string name="firmware_update_image">Firmware update image</string>
    <string name="firmware_cancel_msg">Don\'t cancel the update until the process is complete</string>
    <string name="session_timeout">Session Timeout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="expired">Expired</string>
    <string name="view_appointment">View Appointment</string>
    <string name="facility">Facility:</string>
    <string name="location">Location:</string>
    <string name="department">Department:</string>
    <string name="appointment_time_str">Appointment Time:</string>
    <string name="appointment_status_str">Appointment Status:</string>
    <string name="approved_by">Approved By:</string>
    <string name="purpose_of_visit">Purpose of visit:</string>
    <string name="address">Address:</string>
    <string name="company">Company:</string>
    <string name="person_to_visit">Person to visit:</string>
    <string name="name">Name:</string>
    <string name="save">Save</string>
    <string name="invalid_time">Please select the future time</string>


</resources>