<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/size_32"
    android:layout_marginEnd="@dimen/size_32"
    android:orientation="vertical">

    <include
        layout="@layout/badge_device_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/welcome_home_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_17"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_home"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/appt_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appt_user_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_24" />

        </LinearLayout>

        <ImageView
            android:id="@+id/user_eicon"
            android:layout_width="@dimen/size_32"
            android:layout_height="@dimen/size_32"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/size_05"
            android:contentDescription="@string/wave_hand"
            android:src="@drawable/waving_hand"
            app:layout_constraintLeft_toLeftOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/user_profile_pic"
            android:layout_width="@dimen/size_72"
            android:layout_height="@dimen/size_48"
            android:layout_gravity="end"
            android:contentDescription="@string/user_pic" />

    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/schedule_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/appointment_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_15"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/appointment_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/upcoming_appointment"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_14" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/view_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_all"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_size_14" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/appt_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/size_10" />

                <LinearLayout
                    android:id="@+id/ll_no_appointment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_30"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/serch_appoint" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/no_appointment"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/consectetur_adipiscing_elit"
                        android:textColor="@color/gray" />

                    <TextView
                        android:id="@+id/textview_scheduleAppoinment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/size_10"
                        android:background="@color/green"
                        android:padding="@dimen/size_10"
                        android:text="@string/schedule_appointment"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_past"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/schedule_ll"
                android:layout_marginTop="@dimen/size_10"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/size_05"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/past_appointment"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/view_all_past"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_all"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/past_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/ll_past"
                android:layout_marginBottom="@dimen/size_10"
                app:layout_constraintLeft_toLeftOf="parent" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>